<resources>
    <string name="app_name">Dotify</string>
    <string name="change_user_btn">CHANGE USER</string>
    <string name="song_artist_txt">Seven Lions featuring Tove Lo, Myon, and Shane 54</string>
    <string name="song_title_txt">Strangers</string>
    <string name="num_plays_txt">%1$d plays</string>
    <string name="play_button">play button</string>
    <string name="next_button">next button</string>
    <string name="previous_button">previous button</string>
    <string name="image_desc">This is the cover image of an album</string>
    <string name="apply_user_btn">APPLY</string>
    <string name="edit_text_hint">Enter new username</string>
    <string name="artist_name_item">Artist name</string>
    <string name="song_title_item">Title of Song</string>
    <string name="mini_player_text">%s - %s</string>
    <string name="shuffle">Shuffle</string>
    <string name="settings_txt_btn">Settings</string>
    <string name="title_activity_settings">SettingsActivity</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="username">%s</string>
    <string name="fullname">%s %s</string>
    <string name="dob">Joined: 10/03/20</string>
    <string name="favIceCream">Favorite ice cream: Chocolate</string>
    <string name="profileName">%s</string>
    <string name="profilePicDesc">Profile picture</string>
    <string name="statsText">Play count: %1$d</string>
    <string name="creatorTv">Creator: Vanessa Sugiharto</string>
    <string name="websiteText">Website: vanessa-sugiharto-portfolio.webflow.io</string>
    <string name="versionText">Version: %s</string>
    <string name="new_songs">New Songs</string>
    <string name="new_songs_channel_description">This is a channel that notifies when a new song is released</string>

    <string name="title_notif">%s just released a new song!!!</string>
    <string name="desc_notif">Listen to %s now on Dotify</string>
</resources>