<?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/userLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
    >
        <TextView
            android:id="@+id/username_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            />
        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1"
            />
        <Button
            android:id="@+id/change_user_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/change_user_btn"
            />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/userChangeLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:visibility="invisible"
        >
        <EditText
            android:id="@+id/username_edit"
            android:inputType="text"
            android:autofillHints="username"
            android:hint="@string/edit_text_hint"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            />
        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1"
            />
        <Button
            android:id="@+id/apply_user_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/apply_user_btn"
            />
    </LinearLayout>

    <ImageButton
        android:id="@+id/songImage"
        android:layout_width="match_parent"
        android:scaleType="centerInside"
        android:layout_gravity="center"
        android:background="@color/white"
        android:layout_height="300dp"
        app:srcCompat="@drawable/strangers_cover_art"
        android:contentDescription="@string/image_desc"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/userLayout"
         />

    <TextView
        android:id="@+id/songTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="@string/song_title_txt"
        android:textSize="25sp"
        app:layout_constraintTop_toBottomOf="@id/songImage"
        />

    <TextView
        android:id="@+id/songArtist"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:maxLines="1"
        android:ellipsize="end"
        android:text="@string/song_artist_txt"
        app:layout_constraintTop_toBottomOf="@id/songTitle"
         />

    <TextView
        android:id="@+id/numPlays"
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:maxLines="1"
        android:textColor="@color/black"
        app:layout_constraintTop_toBottomOf="@id/songArtist"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@id/numPlays"
        android:orientation="horizontal"
        android:gravity="center"

        >

        <ImageButton
            android:id="@+id/previousBtn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/white"
            android:onClick="prevClicked"
            android:scaleType="fitCenter"
            android:contentDescription="@string/previous_button"
            android:src="@drawable/ic_previous" />

        <ImageButton
            android:id="@+id/playBtn"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="60dp"
            android:src="@drawable/ic_play"
            android:background="@color/white"
            android:scaleType="fitCenter"
            android:contentDescription="@string/play_button"
            android:onClick="playClicked"
            />
        <ImageButton
            android:id="@+id/nextBtn"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_next"
            android:background="@color/white"
            android:scaleType="fitCenter"
            android:contentDescription="@string/next_button"
            android:onClick="nextClicked"
            />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>