<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/itemRoot"
    android:padding="10dp"
    >
    <ImageView
        android:id="@+id/ivSongImage"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:scaleType="centerInside"
        android:layout_gravity="center"
        app:layout_constraintDimensionRatio="1:1"
        android:src="@drawable/ic_previous"
        android:contentDescription="@string/image_desc"
        />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingStart="10dp"
        android:paddingEnd="0dp"
        >
        <TextView
            android:id="@+id/tvSongName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/song_title_item"
            android:maxLines="1"
            android:ellipsize="end"
            />
        <TextView
            android:id="@+id/tvSongArtist"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/artist_name_item"
            android:maxLines="1"
            android:ellipsize="end"
            />

    </LinearLayout>

</LinearLayout>